--- a/static/variables.darkmode.css
+++ b/static/variables.darkmode.css
@@ -1,29 +1,33 @@
 :root {
   --neutral : #121212;
 
-  --primary-900 : #F0F1F2;
-  --primary-800 : #CBB8F0;
-  --primary-700 : #B799E9;
-  --primary-600 : #A57BE4;
-  --primary-500 : #904BDF;
-  --primary-400 : #6233C7;
-  --primary-300 : #5332BE;
-  --primary-200 : #3014A4;
-  --primary-100 : #1D0691;
-  --primary-50 : #0E0085;
+  --primary-900 : #BBD6F7;
+  --primary-800 : #8DBBF2;
+  --primary-700 : #5FA0EC;
+  --primary-600 : #3285E7;
+  --primary-500 : #186BCD;
+  --primary-400 : #1353A0;
+  --primary-300 : #0D3B72;
+  --primary-200 : #082444;
+  --primary-100 : #05182E;
   
-  --secondary-900 : #F0F1F2;
-  --secondary-800 : #FFD7B9;
-  --secondary-700 : #FBC699;
-  --secondary-600 : #F4B270;
-  --secondary-500 : #FF9F63;
-  --secondary-400 : #E87229;
-  --secondary-300 : #FF6D33;
-  --secondary-200 : #EF4813;
-  --secondary-100 :  #CE2B04;
-  --secondary-50 : #851200;
+  --secondary-700 : #FFEBCC;
+  --secondary-600 : #FFD899;
+  --secondary-500 : #FFC466;
+  --secondary-400 : #FFB133;
+  --secondary-300 : #FF9D00;
+  --secondary-200 : #F09400;
+  --secondary-100 : #E08A00;
+  
 
-  --surface-200 : #FAFAFA;
-  --surface-100 : #F5F5F5;
-  --surface-50 : #EEEEEE;
+  --surface-900 : #FFFF;
+  --surface-800 : #EDEDED;
+  --surface-700 : #D4D4D4;
+  --surface-600 : #BABABA;
+  --surface-500 : #A1A1A1;
+  --surface-400 : #878787;
+  --surface-300 : #6E6E6E;
+  --surface-200 : #545454;
+  --surface-100 : #3B3B3B;
+  --surface-50 : #212121;
 }
