--- a/static/variables.lightmode.css
+++ b/static/variables.lightmode.css
@@ -1,31 +1,35 @@
 :root {
-  --neutral : #FFFFFF;
+  --neutral : #FEFEFE;
 
 
-  --primary-50 : #F0F1F2;
-  --primary-100 : #CBB8F0;
-  --primary-200 : #B799E9;
-  --primary-300 : #A57BE4;
-  --primary-400 : #904BDF;
-  --primary-500 : #6233C7;
-  --primary-600 : #5332BE;
-  --primary-700 : #3014A4;
-  --primary-800 : #1D0691;
-  --primary-900 : #0E0085;
+  --primary-100 : #BBD6F7;
+  --primary-200 : #8DBBF2;
+  --primary-300 : #5FA0EC;
+  --primary-400 : #3285E7;
+  --primary-500 : #186BCD;
+  --primary-600 : #1353A0;
+  --primary-700 : #0D3B72;
+  --primary-800 : #082444;
+  --primary-900 : #05182E;
   
-  --secondary-50 : #F0F1F2;
-  --secondary-100 : #FFD7B9;
-  --secondary-200 : #FBC699;
-  --secondary-300 : #F4B270;
-  --secondary-400 : #FF9F63;
-  --secondary-500 : #E87229;
-  --secondary-600 : #FF6D33;
-  --secondary-700 : #EF4813;
-  --secondary-800 :  #CE2B04;
-  --secondary-900 : #851200;
+  --secondary-100 : #FFEBCC;
+  --secondary-200 : #FFD899;
+  --secondary-300 : #FFC466;
+  --secondary-400 : #FFB133;
+  --secondary-500 : #FF9D00;
+  --secondary-600 : #F09400;
+  --secondary-700 : #E08A00;
+  
 
   
-  --surface-50 : #616161;
-  --surface-100 : #424242;
-  --surface-200 : #212121;
+  --surface-50 : #FFFF;
+  --surface-100 : #EDEDED;
+  --surface-200 : #D4D4D4;
+  --surface-300 : #BABABA;
+  --surface-400 : #A1A1A1;
+  --surface-500 : #878787;
+  --surface-600 : #6E6E6E;
+  --surface-700 : #545454;
+  --surface-800 : #3B3B3B;
+  --surface-900 : #212121;
 }
